Fix image shift on active

--- a/src/styles/partials/_toolbar.scss
+++ b/src/styles/partials/_toolbar.scss
@@ -79,6 +79,7 @@
         width: 60px;
         height: 60px;
         border-radius: var(--rounded-sm);
+        border: 2px solid transparent;
         transition: border 150ms;
       }
 
